# rbatis-tools

./: .gitignore  Cargo.toml  README.md  reverse.yml
dir/: article.rs  user.rs
models/hyat/: comfieldsmap.rs  gao_kao_school.rs  mod.rs
src/: app_arguments.rs  common.rs  custom_config.rs  main.rs
src/gen_struct/: mod.rs  mysql_struct.rs  template.rs
src/mysql_struct/: gen_struct.rs  mod.rs
templates/: base.tera  custom.tera
