[package]
name = "rbatis-tools"
version = "0.1.11"
authors = ["taochen"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/rbatis-tools/blob/main/README.md"
repository = "https://github.com/ptechen/rbatis-tools.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generate the RUST structure based on the MySQL table structure"

[dependencies]
Inflector = "^0.11.4"
lazy_static = "^1.4.0"
mysql = "^20.1.0"
quicli = "^0.4.0"
regex = "^1.5.4"
structopt = "^0.3.21"
async-std = { version = "^1.9.0", features = ["attributes"] }
serde = "^1.0.126"
serde_derive = "^1.0.126"
serde_yaml = "^0.8.17"
chrono = "^0.4.19"
tera = "^1.11.0"
async-trait = "^0.1.50"
serde_json = "^1.0.64"
