[package]
name = "rbatis-tools"
version = "0.1.18"
authors = ["taochen"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/rbatis-tools/blob/main/README.md"
repository = "https://github.com/ptechen/rbatis-tools.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generate the RUST structure based on the MySQL table structure"

[dependencies]
Inflector = "0.11.4"
mysql = "22.0.0"
quicli = "0.4.0"
regex = "1.5.4"
structopt = "0.3.26"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
chrono = "0.4.19"
tera = "1.15.0"
async-trait = "0.1.52"
serde_json = "1.0.78"
once_cell = "1.9.0"
